# kemomimi

./: README.md
backend/: .env  Cargo.toml  README.md
backend/docs/: info.md
backend/kemomimi-api/: Cargo.toml
backend/kemomimi-api/src/: libs.rs  main.rs  routes.rs
backend/kemomimi-api/src/routes/public_items/: index.rs
backend/kemomimi_api/: Cargo.toml
backend/kemomimi_api/src/: lib.rs  libs.rs  main.rs
backend/kemomimi_api/src/routes/categories/: index.rs
backend/kemomimi_api/src/routes/private_items/: index.rs
backend/kemomimi_api/src/routes/products/: index.rs
backend/kemomimi_api/src/routes/public_items/: index.rs
backend/kemomimi_api/src/routes/users/: index.rs
backend/migrations/: 20241216163427_first-kemomimi.down.sql  20241216163427_first-kemomimi.up.sql
backend/openapi_gen/: Cargo.toml  README.md
backend/openapi_gen/.openapi-generator/: FILES
backend/openapi_gen/src/: lib.rs  models.rs
backend/openapi_gen/src/apis/: categories.rs  mod.rs  private_items.rs  products.rs  public_items.rs  users.rs
backend/openapi_gen/src/server/: mod.rs
backend/src/: main.rs
backend/tests/: Cargo.toml  public_items_test.rs
docs/: api_ref.yaml
docs/api/: merged.yaml  openapi.md  openapi.yaml  redoc-static.html
docs/api/paths/: categories.yaml  private_items.yaml  products.yaml  public_items.yaml  users.yaml
docs/api/schemas/: category.yaml  index.yaml  private_item.yaml  product.yaml  public_item.yaml  public_item_details.yaml  public_item_entry.yaml  user.yaml
docs/design/: db_schema.md  road_map.md
frontend/kemomimi-app/: db.json  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
frontend/kemomimi-app/public/: index.html  manifest.json
frontend/kemomimi-app/src/: App.js
frontend/kemomimi-app/src/app/: layout.tsx
frontend/kemomimi-app/src/app/api/public-items-api/: route.ts
frontend/kemomimi-app/src/app/public-items/: page.tsx
frontend/kemomimi-app/src/app/public-items/components/: ItemList.tsx  ItemRow.tsx  SearchBar.tsx
frontend/kemomimi-app/src/components/: ItemList.jsx  PublicItemsList.css  PublicItemsList.js
frontend/kemomimi-app/src/utils/: api.ts
ui-design/: design.md
