[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"] }
dotenvy = "0.15.7"
