[package]
name = "kemomimi-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
axum-extra = { version = "0.9.6", features = ["cookie", "multipart"] }
chrono = { version = "0.4.39", features = ["now"] }
chrono-tz = { version = "0.10.0" }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-native-tls",
    "postgres",
] }
dotenvy = "0.15.7"
openapi = { path = "../openapi_gen" }
