[package]
name = "kemomimi_api"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "time",
] }
axum = "0.7.7"
axum-extra = { version = "0.9.6", features = ["cookie", "multipart"] }
chrono = { version = "0.4.39", features = ["now"] }
chrono-tz = { version = "0.10.0" }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v7"] }
dotenvy = "0.15.7"
openapi = { path = "../openapi_gen" }
