[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
kemomimi_api = { path = "../kemomimi_api" }
openapi = { path = "../openapi_gen" }

axum = "0.7.7"
axum-extra = { version = "0.9.6", features = ["cookie", "multipart"] }
chrono = { version = "0.4.39", features = ["now"] }
chrono-tz = { version = "0.10.0" }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-native-tls",
    "postgres",
] }
futures-channel = "0.3.31"
serde_json = "1.0.82"


[[test]]
name = "public_items_test"
path = "public_items_test.rs"
